Remove local images and reference placeholders

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTG Image Integration Testing Framework</title>
+    <title>Universal MTG Card Searcher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -261,6 +261,9 @@
     </style>
 </head>
 <body>
+    <div class="text-center mb-4">
+        <img src="https://via.placeholder.com/1200x300?text=Universal+MTG+Searcher" class="img-fluid" alt="Universal MTG Searcher">
+    </div>
     <!-- Load ALL your JavaScript files -->
     <script src="js/utils.js"></script>
     <script src="js/card-search.js"></script>
@@ -280,8 +283,8 @@
     <script src="js/visual-search.js"></script>
 
     <div class="container-fluid">
-        <h1 class="text-center mb-4">MTG Image Integration Testing</h1>
-        <p class="text-center text-muted">Test that search results return and display images correctly</p>
+        <h1 class="text-center mb-4">Universal MTG Card Searcher</h1>
+        <p class="text-center text-muted">Search the entire Magic: The Gathering card database with image previews</p>
         
         <!-- API URL -->
         <div class="card mb-4">
@@ -451,6 +454,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="text-center mt-4">
+        <img src="https://via.placeholder.com/1000x200?text=Search+Cards" class="img-fluid" alt="Search Cards">
     </div>
 
     <!-- Image Modal -->
