--- a/static/api_test.html
+++ b/static/api_test.html
@@ -6,6 +6,7 @@
     <title>SeekEDH API Test Suite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/image-system.css" rel="stylesheet">
 </head>
 <body>
     <div class="text-center mb-4">
@@ -523,5 +524,7 @@
     <script src="js/data.js"></script>
     <script src="js/price.js"></script>
     <script src="js/rag.js"></script>
+    <script src="js/enhanced_image_integration.js"></script>
+    <script src="js/image-system.js"></script>
 </body>
 </html>
