--- a/static/api_test.html
+++ b/static/api_test.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SeekEDH API Test Suite</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="css/image-system.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/styles.css" rel="stylesheet">
+    <link href="/static/css/image-system.css" rel="stylesheet">
 </head>
 <body>
     <div class="text-center mb-4">
@@ -516,15 +516,15 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/deck.js"></script>
-    <script src="js/status.js"></script>
-    <script src="js/database.js"></script>
-    <script src="js/data.js"></script>
-    <script src="js/price.js"></script>
-    <script src="js/rag.js"></script>
-    <script src="js/enhanced_image_integration.js"></script>
-    <script src="js/image-system.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/utils.js"></script>
+    <script src="/static/js/deck.js"></script>
+    <script src="/static/js/status.js"></script>
+    <script src="/static/js/database.js"></script>
+    <script src="/static/js/data.js"></script>
+    <script src="/static/js/price.js"></script>
+    <script src="/static/js/rag.js"></script>
+    <script src="/static/js/enhanced_image_integration.js"></script>
+    <script src="/static/js/image-system.js"></script>
 </body>
 </html>
